<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:scaleType="centerInside"
                android:layout_marginBottom="20dp"
                android:padding="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textCapWords"
                android:id="@+id/et_first_name"
                android:hint="@string/first_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textCapWords"
                android:id="@+id/et_last_name"
                android:hint="@string/last_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                android:maxLength="9"
                android:id="@+id/et_dni"
                android:hint="@string/dni"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="datetime"
                android:focusable="false"
                android:id="@+id/et_birth_date"
                android:hint="@string/birth_date"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:id="@+id/et_email"
                android:hint="@string/email"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:id="@+id/et_user"
                android:visibility="gone"
                android:hint="@string/username"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:focusable="false"
                android:inputType="text"
                android:id="@+id/et_district"
                android:hint="@string/direction"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:id="@+id/et_password"
                android:hint="@string/password"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:id="@+id/et_repeat_password"
                android:hint="@string/repeat_password"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/register"
                android:id="@+id/btn_register"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_green"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>