<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <FrameLayout
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/logo"
                    android:scaleType="centerInside"
                    android:layout_marginBottom="20dp"
                    android:padding="20dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:inputType="textEmailAddress"
                        android:id="@+id/et_user"
                        android:hint="@string/user"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/et_password"
                        android:hint="@string/password"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/normal_text"
                        android:visibility="gone"
                        android:id="@+id/tv_forgot_password"
                        android:text="@string/forgot_my_password"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_gravity="right"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/login"
                        android:id="@+id/btn_login"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/button_white"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/register"
                        android:id="@+id/btn_register"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/button_green"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</LinearLayout>