<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/huge_text"
        android:id="@+id/tv_welcome_user"
        android:text="@string/hello_user"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_select"
        android:id="@+id/tv_points"
        android:textSize="@dimen/normal_text"
        android:text="@string/to_date_you_have_x_points"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/btn_recycle"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_green"
        android:padding="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_margin="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/realizar_entrega"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="@string/ready_to_recycle"
            android:textSize="@dimen/normal_text"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:id="@+id/btn_my_deliveries"
            android:gravity="center"
            android:background="@drawable/button_green"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/mis_entregas_2"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:text="@string/my_deliveries"
                android:textSize="@dimen/normal_text"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:id="@+id/btn_find_us"
            android:gravity="center"
            android:background="@drawable/button_green"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/mis_entregas"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:text="@string/find_us"
                android:textSize="@dimen/normal_text"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:id="@+id/btn_benefits"
            android:gravity="center"
            android:background="@drawable/button_green"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/mis_beneficio"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:text="@string/benefits"
                android:textSize="@dimen/normal_text"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:id="@+id/btn_account"
            android:gravity="center"
            android:background="@drawable/button_green"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/perfil"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:text="@string/my_account"
                android:textSize="@dimen/normal_text"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>