<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:src="@drawable/ic_account_circle"
            android:tint="@color/black"
            android:id="@+id/iv_profile"
            android:layout_margin="10dp"
            android:layout_height="50dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/xxlarge_text"
            android:text="@string/first_name"
            android:id="@+id/tv_full_name"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:layout_height="2dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dni"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/xlarge_text"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dni"
        android:id="@+id/tv_document_number"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black_select"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/xlarge_text"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"
        android:id="@+id/tv_birth_date"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black_select"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/xlarge_text"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/tv_email"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black_select"/>
    <Button
        android:layout_width="match_parent"
        android:background="@drawable/button_green"
        android:text="Cerrar Sesión"
        android:id="@+id/btn_close_session"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />
</LinearLayout>