<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_detail"
                android:textColor="@color/black"
                android:textSize="@dimen/xxxlarge_text"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/xlarge_text"
                android:text="@string/delivery_description"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/date"
                android:textSize="@dimen/tiny_text"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_date"
                android:text="@string/date"
                android:textSize="@dimen/normal_text"
                android:layout_marginTop="5dp"
                android:textColor="@color/black_select"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/direction"
                android:textSize="@dimen/tiny_text"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_supervisor"
                android:text="@string/direction"
                android:textSize="@dimen/normal_text"
                android:layout_marginTop="5dp"
                android:textColor="@color/black_select"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/collection_point"
                android:textSize="@dimen/tiny_text"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_collection_point"
                android:text="@string/collection_point"
                android:textSize="@dimen/normal_text"
                android:layout_marginTop="5dp"
                android:textColor="@color/black_select"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/delivery_detail"
                android:textSize="@dimen/tiny_text"
                android:visibility="gone"
                android:layout_marginTop="10dp"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_delivery_list"
                android:layout_marginTop="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:layout_weight="1"
                    android:textSize="@dimen/normal_text"
                    android:text="@string/total_points"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="@dimen/normal_text"
                    android:id="@+id/tv_total_points"
                    android:text="@string/total_points"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>